--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,8 +6,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Mona Sans, Hubot Sans, -apple-system, BlinkMacSystemFont,
+    Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+    Helvetica Neue, sans-serif;
 }
 
 a {
@@ -25,5 +26,22 @@ a {
   }
   body {
     color: white;
+  }
+}
+
+@layer base {
+  @font-face {
+    font-family: "Mona Sans";
+    src: url("../public/Mona-Sans.woff2") format("woff2 supports variations"),
+      url("../public/Mona-Sans.woff2") format("woff2-variations");
+    font-weight: 200 900;
+    font-stretch: 75% 125%;
+  }
+  @font-face {
+    font-family: "Hubot Sans";
+    src: url("../public/Hubot-Sans.woff2") format("woff2 supports variations"),
+      url("../public/Hubot-Sans.woff2") format("woff2-variations");
+    font-weight: 200 900;
+    font-stretch: 75% 125%;
   }
 }
